[gd_scene load_steps=26 format=2]

[ext_resource path="res://Fonts/spacegrotesk/SpaceGrotesk-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Code/Scripts/Reload.gd" type="Script" id=2]
[ext_resource path="res://Code/Scripts/Count_Timer.gd" type="Script" id=3]
[ext_resource path="res://Code/Scripts/Evidence.gd" type="Script" id=4]
[ext_resource path="res://Code/Scripts/Notes.gd" type="Script" id=11]
[ext_resource path="res://Code/Scripts/Shortcuts.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Fonts/spacegrotesk/SpaceGrotesk-Regular.otf"

[sub_resource type="DynamicFont" id=9]
font_data = SubResource( 8 )

[sub_resource type="DynamicFont" id=14]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Fonts/spacegrotesk/SpaceGrotesk-Regular.otf"

[sub_resource type="DynamicFont" id=17]
size = 25
font_data = SubResource( 16 )

[sub_resource type="DynamicFont" id=18]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://Fonts/spacegrotesk/SpaceGrotesk-Regular.otf"

[sub_resource type="DynamicFont" id=20]
font_data = SubResource( 19 )

[sub_resource type="Animation" id=21]
resource_name = "Notes_Animation"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Notes:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.24996 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -409, 300 ), Vector2( 7, 300 ) ]
}

[sub_resource type="DynamicFontData" id=22]
font_path = "res://Fonts/spacegrotesk/SpaceGrotesk-Regular.otf"

[sub_resource type="DynamicFont" id=23]
size = 22
font_data = SubResource( 22 )

[node name="PhasmoFriend" type="Node2D"]

[node name="Main Screen" type="Node2D" parent="."]
script = ExtResource( 12 )

[node name="Sanity" type="RichTextLabel" parent="Main Screen"]
margin_left = 246.0
margin_top = 9.0
margin_right = 428.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 1 )
text = "Last Known Sanity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sanity_Input" type="SpinBox" parent="Main Screen/Sanity"]
margin_left = 3.0
margin_top = 24.0
margin_right = 165.0
margin_bottom = 109.0
theme = SubResource( 3 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Count" type="Node" parent="Main Screen"]
script = ExtResource( 3 )

[node name="CountDown_Text" type="RichTextLabel" parent="Main Screen/Count"]
margin_left = 42.1729
margin_top = 77.173
margin_right = 181.173
margin_bottom = 129.173
custom_fonts/normal_font = SubResource( 4 )
text = "00:00"
override_selected_font_color = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDown_Timer" type="Timer" parent="Main Screen/Count"]

[node name="CountDown_Difficulty" type="MenuButton" parent="Main Screen/Count"]
margin_left = 7.0
margin_top = 10.0
margin_right = 184.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 5 )
text = "Difficulty Level"
flat = false
items = [ "Professional", null, 0, false, false, 0, 0, null, "", false, "Intermediate", null, 0, false, false, 1, 0, null, "", false, "Amateur", null, 0, false, false, 2, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDown_Start" type="Button" parent="Main Screen/Count"]
margin_left = 186.0
margin_top = 10.0
margin_right = 242.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 6 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDown_Popup" type="AcceptDialog" parent="Main Screen/Count"]
margin_left = 14.0
margin_top = 25.0
margin_right = 246.0
margin_bottom = 107.0
window_title = "Select Difficulty"
dialog_text = "Select a Difficulty Please"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountUp_Timer" type="Timer" parent="Main Screen/Count"]

[node name="CountUp_Text" type="RichTextLabel" parent="Main Screen/Count"]
margin_left = 78.0
margin_top = 175.0
margin_right = 447.0
margin_bottom = 275.0
custom_fonts/normal_font = SubResource( 7 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "00:00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountUp_Button" type="Button" parent="Main Screen/Count"]
margin_left = 4.0
margin_top = 195.0
margin_right = 73.0
margin_bottom = 255.0
custom_fonts/font = SubResource( 9 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Evidence" type="Node2D" parent="Main Screen"]
script = ExtResource( 4 )

[node name="Evidence_Outcomes" type="RichTextLabel" parent="Main Screen/Evidence"]
margin_left = 26.0
margin_top = 500.318
margin_right = 387.0
margin_bottom = 809.318
custom_fonts/normal_font = SubResource( 14 )
text = "All"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Evidence_Label" type="Label" parent="Main Screen/Evidence"]
margin_left = 26.0
margin_top = 471.0
margin_right = 275.0
margin_bottom = 506.0
custom_fonts/font = SubResource( 15 )
text = "Possible Outcomes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evidence_Fingerprints" type="TextureButton" parent="Main Screen/Evidence"]
margin_left = 42.9322
margin_top = 280.728
margin_right = 124.932
margin_bottom = 362.728
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Node" parent="Main Screen"]

[node name="NameEnter" type="TextEdit" parent="Main Screen/Name"]
margin_left = 75.0
margin_top = 142.0
margin_right = 409.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Main Screen/Name"]
margin_left = 12.0
margin_top = 136.0
margin_right = 75.0
margin_bottom = 190.0
custom_fonts/font = SubResource( 18 )
text = "Ghost Name"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reload" type="Node" parent="Main Screen"]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="Main Screen/Reload"]
margin_left = 276.0
margin_top = 816.0
margin_right = 403.0
margin_bottom = 883.0
custom_fonts/font = SubResource( 20 )
text = "New Hunt"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notes" type="Node" parent="Main Screen"]
script = ExtResource( 11 )

[node name="Notes_Button" type="Button" parent="Main Screen/Notes"]
margin_left = 12.0
margin_top = 816.0
margin_right = 139.0
margin_bottom = 883.0
custom_fonts/font = SubResource( 20 )
toggle_mode = true
text = "Show Notes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Main Screen/Notes"]
anims/Notes_Animation = SubResource( 21 )

[node name="Notes" type="TextEdit" parent="Main Screen/Notes/AnimationPlayer"]
margin_left = -409.0
margin_top = 300.0
margin_right = -7.0
margin_bottom = 807.0
custom_fonts/font = SubResource( 23 )
highlight_current_line = true
show_line_numbers = true
context_menu_enabled = false
shortcut_keys_enabled = false
smooth_scrolling = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Main Screen/Count/CountDown_Timer" to="Main Screen/Count" method="_on_CountDown_Timer_timeout"]
[connection signal="pressed" from="Main Screen/Count/CountDown_Start" to="Main Screen/Count" method="_on_CountDown_Start_pressed"]
[connection signal="timeout" from="Main Screen/Count/CountUp_Timer" to="Main Screen/Count" method="_on_CountUp_Timer_timeout"]
[connection signal="pressed" from="Main Screen/Count/CountUp_Button" to="Main Screen/Count" method="_on_CountUp_Button_pressed"]
[connection signal="pressed" from="Main Screen/Evidence/Evidence_Fingerprints" to="Main Screen/Evidence" method="_on_Evidence_Fingerprints_pressed"]
[connection signal="pressed" from="Main Screen/Reload/Button" to="Main Screen/Reload" method="_on_Button_pressed"]
[connection signal="pressed" from="Main Screen/Notes/Notes_Button" to="Main Screen/Notes" method="_on_Notes_Button_pressed"]
